k8s/namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: qa
---
apiVersion: v1
kind: Namespace
metadata:
  name: uat
---
apiVersion: v1
kind: Namespace
metadata:
  name: prod
