k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  namespace: dev

spec:
  replicas: 1

  selector:
    matchLabels:
      app: web-app

  template:
    metadata:
      labels:
        app: web-app

    spec:
      containers:
      - name: web-app

        image: ghcr.io/aggy296/web-app:d1b969ca389c73bdaab5735fa390a95b61b46402

        ports:
        - containerPort: 3000

        resources:
          requests:
            cpu: "10m"
            memory: "16Mi"
          limits:
            cpu: "50m"
            memory: "64Mi"
