k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: web-app-ingress
  namespace: dev

spec:
  defaultBackend:
    service:
      name: web-app-service
      port:
        number: 80
